created one potential figure

--- a/notebooks/04_paper.ipynb
+++ b/notebooks/04_paper.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "9150cb01",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "fb246427",
    "metadata": {},
    "outputs": [
@@ -126,13 +126,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "2709f9b8",
    "metadata": {},
    "outputs": [],
    "source": [
     "plt.rcParams.update(bundles.icml2024(column=\"half\"))\n",
-    "plt.rcParams.update(cycler.cycler(color=palettes.tue_plot))  # set color cycle"
+    "# TUE colors\n",
+    "plt.rcParams.update({\"axes.prop_cycle\": plt.cycler(color=palettes.tue_plot)})"
    ]
   },
   {
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "d8989188",
    "metadata": {},
    "outputs": [
@@ -198,7 +199,7 @@
     "ax.set_xlabel(\"Official count share\")\n",
     "ax.set_ylabel(\"Strava count share\")\n",
     "\n",
-    "fig.savefig(\"../report/figs/segment_share.pdf\", bbox_inches=\"tight\")\n",
+    "fig.savefig(\"../report/figs/segment_share.pdf\")\n",
     "plt.show()"
    ]
   },
@@ -211,44 +212,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "44b1c3cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n",
-      "{'n_nodes': 3048, 'n_edges': 4335, 'seg_risk_min': 1.970577867698941e-06, 'seg_risk_median': 6.018735379395284e-05, 'seg_risk_max': 0.0030569636852363657, 'risk_total_median': 0.00012037470758790568, 'risk_total_max': 0.0031171510390303183, 'length_median': 372.42039723706404, 'node_penalty_nonzero_share': 0.9983852364475202, 'graph_node_ids_attached': 2862, 'notes': 'Attached node_id to 2862/3048 graph nodes (snap<= 20.0m). Risk objective uses eta=1.0 for junction penalty weighting.'}\n",
-      "Shortest length stats: {'length_m': 6599.195578921858, 'seg_risk_sum': 0.001044041098333539, 'node_penalty_sum': 0.0007827180918293981, 'risk_total_sum': 0.001826759190162937}\n",
-      "Constrained min-risk stats: {'length_m': 6599.195578921858, 'seg_risk_sum': 0.001044041098333539, 'node_penalty_sum': 0.0007827180918293981, 'risk_total_sum': 0.001826759190162937}\n",
-      "ΔL: 0.0 ΔR: 0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Example usage of run_one_od_routing\n",
-    "result = run_one_od_routing(\n",
-    "    segments_panel_gdf=segments_df,\n",
-    "    crossings_gdf=crossings_gdf,\n",
-    "    junction_panel_gdf=junction_df,\n",
-    "    origin_lonlat=(13.3777, 52.5163),\n",
-    "    dest_lonlat=(13.4541, 52.5110),\n",
-    "    eps=0.10,\n",
-    "    eta=1.0,                          \n",
-    ")\n",
-    "\n",
-    "print(result[\"status\"])\n",
-    "print(result[\"graph_sanity\"])\n",
-    "if result[\"status\"] == \"ok\":\n",
-    "    print(\"Shortest length stats:\", result[\"shortest_length_stats\"])\n",
-    "    print(\"Constrained min-risk stats:\", result[\"constrained_min_risk_stats\"])\n",
-    "    print(\"ΔL:\", result[\"delta_L\"], \"ΔR:\", result[\"delta_R\"])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "05f3e48c",
    "metadata": {},
@@ -258,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "efdbfa2e",
    "metadata": {},
    "outputs": [],
@@ -291,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "969848e7",
    "metadata": {},
    "outputs": [],
@@ -608,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "abbf96a7",
    "metadata": {},
    "outputs": [
@@ -654,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "88353940",
    "metadata": {},
    "outputs": [],
@@ -676,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "3e4946f5",
    "metadata": {},
    "outputs": [
@@ -749,10 +712,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "be1f6726",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] Failed to open local file '../notebooks/data/panel/segments_with_risk.parquet'. Detail: [errno 2] No such file or directory",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/data_literacy/.venv/lib/python3.13/site-packages/geopandas/io/arrow.py:650\u001b[39m, in \u001b[36m_read_parquet_schema_and_metadata\u001b[39m\u001b[34m(path, filesystem)\u001b[39m\n\u001b[32m    649\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m650\u001b[39m     schema = \u001b[43mparquet\u001b[49m\u001b[43m.\u001b[49m\u001b[43mParquetDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfilesystem\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfilesystem\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m.schema\n\u001b[32m    651\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/data_literacy/.venv/lib/python3.13/site-packages/pyarrow/parquet/core.py:1424\u001b[39m, in \u001b[36mParquetDataset.__init__\u001b[39m\u001b[34m(self, path_or_paths, filesystem, schema, filters, read_dictionary, binary_type, list_type, memory_map, buffer_size, partitioning, ignore_prefixes, pre_buffer, coerce_int96_timestamp_unit, decryption_properties, thrift_string_size_limit, thrift_container_size_limit, page_checksum_verification, arrow_extensions_enabled)\u001b[39m\n\u001b[32m   1421\u001b[39m     partitioning = ds.HivePartitioning.discover(\n\u001b[32m   1422\u001b[39m         infer_dictionary=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m-> \u001b[39m\u001b[32m1424\u001b[39m \u001b[38;5;28mself\u001b[39m._dataset = \u001b[43mds\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath_or_paths\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfilesystem\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfilesystem\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1425\u001b[39m \u001b[43m                           \u001b[49m\u001b[43mschema\u001b[49m\u001b[43m=\u001b[49m\u001b[43mschema\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mformat\u001b[39;49m\u001b[43m=\u001b[49m\u001b[43mparquet_format\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1426\u001b[39m \u001b[43m                           \u001b[49m\u001b[43mpartitioning\u001b[49m\u001b[43m=\u001b[49m\u001b[43mpartitioning\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   1427\u001b[39m \u001b[43m                           \u001b[49m\u001b[43mignore_prefixes\u001b[49m\u001b[43m=\u001b[49m\u001b[43mignore_prefixes\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/data_literacy/.venv/lib/python3.13/site-packages/pyarrow/dataset.py:790\u001b[39m, in \u001b[36mdataset\u001b[39m\u001b[34m(source, schema, format, filesystem, partitioning, partition_base_dir, exclude_invalid_files, ignore_prefixes)\u001b[39m\n\u001b[32m    789\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m _is_path_like(source):\n\u001b[32m--> \u001b[39m\u001b[32m790\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_filesystem_dataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43msource\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    791\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(source, (\u001b[38;5;28mtuple\u001b[39m, \u001b[38;5;28mlist\u001b[39m)):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/data_literacy/.venv/lib/python3.13/site-packages/pyarrow/dataset.py:472\u001b[39m, in \u001b[36m_filesystem_dataset\u001b[39m\u001b[34m(source, schema, filesystem, partitioning, format, partition_base_dir, exclude_invalid_files, selector_ignore_prefixes)\u001b[39m\n\u001b[32m    471\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m472\u001b[39m     fs, paths_or_selector = \u001b[43m_ensure_single_source\u001b[49m\u001b[43m(\u001b[49m\u001b[43msource\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfilesystem\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    474\u001b[39m options = FileSystemFactoryOptions(\n\u001b[32m    475\u001b[39m     partitioning=partitioning,\n\u001b[32m    476\u001b[39m     partition_base_dir=partition_base_dir,\n\u001b[32m    477\u001b[39m     exclude_invalid_files=exclude_invalid_files,\n\u001b[32m    478\u001b[39m     selector_ignore_prefixes=selector_ignore_prefixes\n\u001b[32m    479\u001b[39m )\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/data_literacy/.venv/lib/python3.13/site-packages/pyarrow/dataset.py:437\u001b[39m, in \u001b[36m_ensure_single_source\u001b[39m\u001b[34m(path, filesystem)\u001b[39m\n\u001b[32m    436\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m437\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(path)\n\u001b[32m    439\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m filesystem, paths_or_selector\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: ../notebooks/data/panel/segments_with_risk.parquet",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Filter and Aggregate segments dataframe\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgeopandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mgpd\u001b[39;00m; \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m segments_with_risk = \u001b[43mgpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_parquet\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43m../notebooks/data/panel/segments_with_risk.parquet\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m segments_with_risk = segments_with_risk.loc[:, [\u001b[33m\"\u001b[39m\u001b[33mcounter_name\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33myear\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mmonth\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mgeometry\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mlatitude\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mlongitude\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m      5\u001b[39m                                                 \u001b[33m\"\u001b[39m\u001b[33mtotal_accidents\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33msum_strava_total_trip_count\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mstreet_name\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mrr_eb\u001b[39m\u001b[33m\"\u001b[39m]]\n\u001b[32m      6\u001b[39m original_crs = segments_with_risk.crs\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/data_literacy/.venv/lib/python3.13/site-packages/geopandas/io/arrow.py:760\u001b[39m, in \u001b[36m_read_parquet\u001b[39m\u001b[34m(path, columns, storage_options, bbox, to_pandas_kwargs, **kwargs)\u001b[39m\n\u001b[32m    756\u001b[39m filesystem, path = _get_filesystem_path(\n\u001b[32m    757\u001b[39m     path, filesystem=filesystem, storage_options=storage_options\n\u001b[32m    758\u001b[39m )\n\u001b[32m    759\u001b[39m path = _expand_user(path)\n\u001b[32m--> \u001b[39m\u001b[32m760\u001b[39m schema, metadata = \u001b[43m_read_parquet_schema_and_metadata\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfilesystem\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    762\u001b[39m geo_metadata = _validate_and_decode_metadata(metadata)\n\u001b[32m    763\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(geo_metadata[\u001b[33m\"\u001b[39m\u001b[33mcolumns\u001b[39m\u001b[33m\"\u001b[39m]) == \u001b[32m0\u001b[39m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/data_literacy/.venv/lib/python3.13/site-packages/geopandas/io/arrow.py:652\u001b[39m, in \u001b[36m_read_parquet_schema_and_metadata\u001b[39m\u001b[34m(path, filesystem)\u001b[39m\n\u001b[32m    650\u001b[39m     schema = parquet.ParquetDataset(path, filesystem=filesystem, **kwargs).schema\n\u001b[32m    651\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m652\u001b[39m     schema = \u001b[43mparquet\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_schema\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfilesystem\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfilesystem\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    654\u001b[39m metadata = schema.metadata\n\u001b[32m    656\u001b[39m \u001b[38;5;66;03m# read metadata separately to get the raw Parquet FileMetaData metadata\u001b[39;00m\n\u001b[32m    657\u001b[39m \u001b[38;5;66;03m# (pyarrow doesn't properly exposes those in schema.metadata for files\u001b[39;00m\n\u001b[32m    658\u001b[39m \u001b[38;5;66;03m# created by GDAL - https://issues.apache.org/jira/browse/ARROW-16688)\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/data_literacy/.venv/lib/python3.13/site-packages/pyarrow/parquet/core.py:2390\u001b[39m, in \u001b[36mread_schema\u001b[39m\u001b[34m(where, memory_map, decryption_properties, filesystem)\u001b[39m\n\u001b[32m   2388\u001b[39m file_ctx = nullcontext()\n\u001b[32m   2389\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m filesystem \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m2390\u001b[39m     file_ctx = where = \u001b[43mfilesystem\u001b[49m\u001b[43m.\u001b[49m\u001b[43mopen_input_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mwhere\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   2392\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m file_ctx:\n\u001b[32m   2393\u001b[39m     file = ParquetFile(\n\u001b[32m   2394\u001b[39m         where, memory_map=memory_map,\n\u001b[32m   2395\u001b[39m         decryption_properties=decryption_properties)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/data_literacy/.venv/lib/python3.13/site-packages/pyarrow/_fs.pyx:815\u001b[39m, in \u001b[36mpyarrow._fs.FileSystem.open_input_file\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/data_literacy/.venv/lib/python3.13/site-packages/pyarrow/error.pxi:155\u001b[39m, in \u001b[36mpyarrow.lib.pyarrow_internal_check_status\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/data_literacy/.venv/lib/python3.13/site-packages/pyarrow/error.pxi:92\u001b[39m, in \u001b[36mpyarrow.lib.check_status\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] Failed to open local file '../notebooks/data/panel/segments_with_risk.parquet'. Detail: [errno 2] No such file or directory"
+     ]
+    }
+   ],
    "source": [
     "# Filter and Aggregate segments dataframe\n",
     "import geopandas as gpd; import matplotlib.pyplot as plt\n",
@@ -775,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "cde7cc01",
    "metadata": {},
    "outputs": [],
@@ -795,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "3776554f",
    "metadata": {},
    "outputs": [
@@ -1044,7 +1033,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1058,7 +1047,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
