--- a/report/report_template.tex
+++ b/report/report_template.tex
@@ -59,7 +59,6 @@
 \usepackage[textsize=tiny]{todonotes}
 
 
-
 % The \icmltitle you define below is probably too long as a header.
 % Therefore, a short form for the running title is supplied here:
 \icmltitlerunning{Exposure-Adjusted Bicycle Crash Risk Estimation and Safer Routing in Berlin} % I think our title is not too long, hence we can use the same as for \icmltitle
@@ -320,15 +319,16 @@ highlight the importance of controlling for exposure when comparing infrastructu
 \section{Results}\label{sec:results}
 
 One of the major outcomes of this work ist the estimation of the risk to have get injured in a bike accidents while driving on a streetsegment.
-This distribution of those calculated risks is displayed in \ref{fig:risk_segments}.
+This distribution of those calculated risks is displayed in Figure~\ref{fig:risk_segments}.
 
 
-\begin{figure}
+\begin{figure}[h]
   \centering
   \includegraphics{figs/risk_segments.pdf}
   \caption{Risk per segment for the area of Berlin. The colors indicate the log-scaled risk for each plotted segment and junction.}
   \label{fig:risk_segments}
 \end{figure}
+
 
 
 
