--- a/notebooks/segment_examples.ipynb
+++ b/notebooks/segment_examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "bcd88a71",
    "metadata": {},
    "outputs": [],
@@ -12,20 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f7255362",
    "metadata": {},
    "outputs": [],
    "source": [
-    "segments_with_risk = gpd.read_parquet(\"../notebooks/data/panel/segments_with_risk.parquet\")\n",
-    "segments_with_risk = segments_with_risk.loc[:, [\"counter_name\", \"year\", \"month\", \"geometry\", \"latitude\", \"longitude\"\n",
+    "segments_with_risk = gpd.read_parquet(\"../data/panel/segments_with_risk.parquet\")\n",
+    "segments_with_risk = segments_with_risk.loc[:, [\"counter_name\", \"year\", \"month\", \"geometry\", \"latitude\", \"longitude\",\n",
     "                                                \"total_accidents\", \"sum_strava_total_trip_count\", \"street_name\", \"rr_eb\"]]\n",
     "original_crs = segments_with_risk.crs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "78500c13",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "bb57e7a5",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "6d0e7c55",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "a473d1d9",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "34c7e2e0",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "6626c77d",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "4975be3a",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "e3cfcee6",
    "metadata": {},
    "outputs": [
@@ -1085,7 +1085,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1099,7 +1099,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
